Fixes selector distortion with very tall images

--- a/css/cbreader.css
+++ b/css/cbreader.css
@@ -91,6 +91,7 @@ body {
 
 img.selectCover {
   width: 100px;
+  height: 100px;
   margin: 5px;
   cursor: pointer;
 }
